fixed the onload issue: initially the website was going to second section on load which is now fixed

--- a/index.html
+++ b/index.html
@@ -364,6 +364,15 @@
     </footer>
 
     <script>
+        window.onload = function () {
+            window.scrollTo({
+                top: 0,
+                left: 0,
+                behavior: 'smooth'
+            });
+        };
+
+
         const container = document.getElementById('hero-bg');
         const numberOfSpans = 10000;
 
